--- a/kubernetes/集群部署/二进制部署方式/二进制部署教程.md
+++ b/kubernetes/集群部署/二进制部署方式/二进制部署教程.md
@@ -42,12 +42,12 @@
 
 ##### 1.1.2 服务器分配说明
 
-| 系统类型 | IP             | 角色           | CPU  | 内存/G | HostName |
-| -------- | -------------- | -------------- | ---- | ------ | -------- |
-| Ubuntu   | 192.168.10.121 | master         | 8    | 15     | node-1   |
-| Ubuntu   | 192.168.10.122 | master\|worker | 8    | 15     | node-2   |
-| Ubuntu   | 192.168.10.123 | worker         | 8    | 15     | node-3   |
-| Ubuntu   | 192.168.10.124 | worker         | 8    | 15     | node-4   |
+| 系统类型 | IP             | 角色           | CPU  | 内存/G | HostName | 状态   |
+| -------- | -------------- | -------------- | ---- | ------ | -------- | ------ |
+| Ubuntu   | 192.168.10.121 | master         | 8    | 15     | node-1   | 已生效 |
+| Ubuntu   | 192.168.10.122 | master\|worker | 8    | 15     | node-2   | 已生效 |
+| Ubuntu   | 192.168.10.123 | worker         | 8    | 15     | node-3   | 已生效 |
+| Ubuntu   | 192.168.10.124 | worker         | 8    | 15     | node-4   | 待加入 |
 
 #### 1.2系统设置（所有集群机器都要操作）
 
