‘调整目录结构

--- a/kubernetes/集群部署/二进制部署方式/二进制部署教程.md
+++ b/kubernetes/集群部署/二进制部署方式/二进制部署教程.md
@@ -1,4 +1,6 @@
-# Kubernetes二进制部署教程
+# Kubernetes(二进制)部署教程
+
+`作者：shouzhi@duan`
 
 ## 一、部署特点
 
@@ -25,7 +27,7 @@
 
 
 
-## 三、部署文档
+## 三、部署教程
 
 ### 1-基础环境准备
 
@@ -181,6 +183,90 @@ for instance in ${ETCDS[@]}; do
   scp etcd etcdctl root@${instance}:/usr/local/bin/
 done
 ```
+
+### 2-证书制作
+
+#### 2.1 安装cfssl
+
+`cfssl是一个CA工具，下面将会用他来安装证书和秘钥文件，安装过程比较简单，安装方法如下`
+
+#### 2.2 根证书签发
+
+`根证书是集群所有节点共享的，只需要创建一个 CA 证书，后续创建的所有证书都由它签名。
+在任意节点（可以免密登录到其他节点）创建一个单独的证书目录。`
+
+##### 2.2.1 根证书配置文件
+
+```powershell
+$ cat > ca-config.json <<EOF
+{
+  "signing": {
+    "default": {
+      "expiry": "876000h"
+    },
+    "profiles": {
+      "kubernetes": {
+        "usages": ["signing", "key encipherment", "server auth", "client auth"],
+        "expiry": "876000h"
+      }
+    }
+  }
+}
+EOF
+
+$ cat > ca-csr.json <<EOF
+{
+  "CN": "Kubernetes",
+  "key": {
+    "algo": "rsa",
+    "size": 2048
+  },
+  "names": [
+    {
+      "C": "US",
+      "L": "Portland",
+      "O": "Kubernetes",
+      "OU": "CA",
+      "ST": "Oregon"
+    }
+  ]
+}
+EOF
+```
+
+##### 2.2.2 生成证书和私钥
+
+```tex
+# 生成证书和私钥
+$ cfssl gencert -initca ca-csr.json | cfssljson -bare ca
+# 生成完成后会有以下文件（我们最终想要的就是ca-key.pem和ca.pem，一个秘钥，一个证书）
+$ ls
+ca-config.json  ca.csr  ca-csr.json  ca-key.pem  ca.pem
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
