修改二进制部署文档名称

--- a/kubernetes/集群部署/二进制部署方式/二进制部署教程.md
+++ b/kubernetes/集群部署/二进制部署方式/二进制部署教程.md
@@ -1,4 +1,4 @@
-# Kubernetes(二进制)部署教程
+# Kubernetes(二进制)高可用部署教程
 
 `作者：shouzhi@duan`
 
@@ -1427,5 +1427,14 @@ $ sed -i "s/\${COREDNS_CLUSTER_IP}/${COREDNS_CLUSTER_IP}/g" nodelocaldns.yaml
 $ kubectl apply -f nodelocaldns.yaml
 ```
 
+##### 3、部署查看
 
+```powershell
+kubectl get nodes -o wide #查看集群状态
+kubectl get po -A #查看所有的POD
+```
+
+![image-20211220152826143](C:\Users\dev\AppData\Roaming\Typora\typora-user-images\image-20211220152826143.png)
+
+![image-20211220152908495](C:\Users\dev\AppData\Roaming\Typora\typora-user-images\image-20211220152908495.png)
 
