设置集群中node的labels

--- a/kubernetes/常用操作命令.md
+++ b/kubernetes/常用操作命令.md
@@ -77,3 +77,9 @@ systemctl stop kube-apiserver \
 & systemctl stop kube-scheduler
 ```
 
+# Node设置label
+
+```powershell
+kubectl label nodes kube-node1 zone=node1
+```
+
