查看pod某个容器日志

--- a/kubernetes/常用操作命令.md
+++ b/kubernetes/常用操作命令.md
@@ -83,3 +83,9 @@ systemctl stop kube-apiserver \
 kubectl label nodes kube-node1 zone=node1
 ```
 
+# 查看pod某个容器日志
+
+```powershell
+kubectl logs -f  <POD-name> -n <nameSpace> -c  <container_name> 
+```
+
