--- a/kubernetes/常用操作命令.md
+++ b/kubernetes/常用操作命令.md
@@ -3,14 +3,10 @@
 kubectl edit cm coredns -n kube-system
 ```
 
-
-
 # 查看所有的pod
 ```tex
 kubectl get pods -A
 ```
-
-
 
 # 查看pod日志
 ```tex
@@ -20,28 +16,26 @@ kubectl logs coredns-5dc5b997f9-2762d -n kube-system
 kubectl get pod coredns-84646c885d-zx2jg --output=yaml --namespace=kube-system
 ```
 
-
-
 # 删除pod
 ```tex
 kubectl delete pod coredns.... -n kube-system
 ```
 
-
-
 # 进入pod内部
-```tex
+```powershell
 kubectl exec nginx -it -- /bin/bash
 ```
 
+# 查看pod详情
 
+```powershell
+kubectl describe pod/mc1 -n default
+```
 
 # 根据标签查询pod
 ```tex
 kubectl get pods -l app=nginx-ds
 ```
-
-
 
 # 启动工作节点
 ```tex
@@ -55,8 +49,6 @@ systemctl daemon-reload \
 ```tex
 systemctl stop kubelet kube-proxy
 ```
-
-
 
 # 启动master
 ```tex
