添加k8s中网络通信中的同一个pod容器之间通信的方式文档描述

--- a/kubernetes/常用操作命令.md
+++ b/kubernetes/常用操作命令.md
@@ -81,3 +81,27 @@ kubectl label nodes kube-node1 zone=node1
 kubectl logs -f  <POD-name> -n <nameSpace> -c  <container_name> 
 ```
 
+# 加载远程YAML
+
+```powershell
+kubectl apply -f https://k8s.io/examples/pods/two-container-pod.yaml
+```
+
+# Pod输出YAML
+
+```powershell
+kubectl get pod two-containers --output=yaml
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
