添加containerd常用命令

--- a/kubernetes/常用操作命令.md
+++ b/kubernetes/常用操作命令.md
@@ -93,11 +93,40 @@ kubectl apply -f https://k8s.io/examples/pods/two-container-pod.yaml
 kubectl get pod two-containers --output=yaml
 ```
 
+# Containerd操作
 
+## ctr tag
 
+> 提交tag
 
+```powershell
+ctr -n k8s.io i tag \
+k8s.gcr.io/pause:3.2 \
+registry.cn-hangzhou.aliyuncs.com/dsz-k8s/k8s.gcr.io/pause:3.2
+```
 
+##  ctr push
 
+> 推送镜像
+
+`注意命名空间需要提前设置好否则推送失败`
+
+```powershell
+ctr -n k8s.io i push \
+--user 用户名:密码   \
+registry.cn-hangzhou.aliyuncs.com/dsz-k8s-gcr-io/pause:3.2
+```
+
+## ctr ns ls 
+
+> 查看所有的命名空间
+
+```powershell
+NAME      LABELS 
+default        
+k8s.io         
+moby 
+```
 
 
 
