添加medusa调试端口配置

--- a/kubernetes/集群部署/二进制部署方式/二进制部署教程(副本).md
+++ b/kubernetes/集群部署/二进制部署方式/二进制部署教程(副本).md
@@ -15,19 +15,8 @@
 
 - 高可用不依赖haproxy、keepalived。采用本地代理方式，简单优雅。
 
-  
 
-## 二、适合群体
-
-- 对kubernetes系统有一定的基础认知。
-
-- 想深入学习kubernetes。
-- 对kubernetes二进制部署有强烈的兴趣。
-- 正在接触或者学习部署生产级别kubernetes高可用集群。
-
-
-
-## 三、部署教程
+## 二、部署教程
 
 ### 1-基础环境准备
 
@@ -1438,44 +1427,6 @@ kubectl get po -A #查看所有的POD
 ![image-20211220152826143](C:\Users\dev\AppData\Roaming\Typora\typora-user-images\image-20211220152826143.png)
 
 ![image-20211220152908495](C:\Users\dev\AppData\Roaming\Typora\typora-user-images\image-20211220152908495.png)
-
-## 四、增加worker
-
-> 例如：在原有集群中新增一个worker节点node-4。
->
-> IP=192.168.10.16
-
-### 1、修改主机名（所有机器）
-
-```powershell
-# 查看主机名
-$ hostname
-# 修改主机名
-$ hostnamectl set-hostname node-4
-# 配置host，使主节点之间可以通过hostname互相访问
-$ vi /etc/hosts
-
-```
-
-### 2、关闭防火墙、selinux、swap，重置iptables（所有机器）
-
-```powershell
-# 关闭selinux
-$ setenforce 0
-$ sed -i '/SELINUX/s/enforcing/disabled/' /etc/selinux/config
-
-# 关闭防火墙
-$ systemctl stop firewalld && systemctl disable firewalld
-
-# 设置iptables规则
-$ iptables -F && iptables -X && iptables -F -t nat && iptables -X -t nat && iptables -P FORWARD ACCEPT
-
-# 关闭swap
-$ swapoff -a && free –h
-
-# 关闭dnsmasq(否则可能导致容器无法解析域名)
-$ service dnsmasq stop && systemctl disable dnsmasq
-```
 
 
 
