添加集群重启

--- a/kubernetes/常用操作命令.md
+++ b/kubernetes/常用操作命令.md
@@ -128,7 +128,27 @@ k8s.io
 moby 
 ```
 
+# 集群重启
 
+```shell
+#停止master
+systemctl stop kube-apiserver & systemctl stop kube-controller-manager & systemctl stop kube-scheduler
+#重启master
+systemctl daemon-reload & systemctl enable kube-apiserver & systemctl enable kube-controller-manager & systemctl enable kube-scheduler & systemctl restart kube-apiserver & systemctl restart kube-controller-manager & systemctl restart kube-scheduler
+
+#停止worker
+systemctl stop kubelet kube-proxy
+#重启worker
+systemctl daemon-reload & systemctl enable kubelet kube-proxy & systemctl restart kubelet kube-proxy
+
+#修改主机名
+hostnamectl set-hostname node-1
+hostnamectl set-hostname node-2
+hostnamectl set-hostname node-3
+
+#查看重启组件
+netstat -lptn | grep kube
+```
 
 
 
